tests/snapshots/snapshots__fixture_sonner.snap
---
source: tests/snapshots.rs
expression: output
---
assets.tsx
     5→export const getAsset
    24→const bars
    26→export const Loader
    38→const SuccessIcon
    48→const WarningIcon
    58→const InfoIcon
    68→const ErrorIcon
    78→export const CloseIcon
hooks.tsx
     3→export const useIsDocumentHidden
index.tsx
    22→const VISIBLE_TOASTS_AMOUNT
    25→const VIEWPORT_OFFSET
    28→const MOBILE_VIEWPORT_OFFSET
    31→const TOAST_LIFETIME
    34→const TOAST_WIDTH
    37→const GAP
    40→const SWIPE_THRESHOLD
    43→const TIME_BEFORE_UNMOUNT
    45→function cn
    49→function getDefaultSwipeDirections
    64→const Toast
   507→function getDocumentDirection
   520→function assignOffset
   552→function useSonner
   593→const Toaster
   617→  const filteredToasts
   623→  const possiblePositions
   641→  const listRef
   642→  const hotkeyLabel
   643→  const lastFocusedElementRef
   644→  const isFocusWithinRef
   646→  const removeToast
state.ts
    13→let toastsCounter
    15→type titleT
    17→class Observer
    22→  constructor
   254→export const ToastState
   257→const toastFunction
   268→const isHttpResponse
   279→const basicToast
   281→const getHistory
   282→const getToasts
   285→export const toast
types.ts
     3→export type ToastTypes
     5→export type PromiseT
     7→export interface PromiseIExtendedResult
    11→export type PromiseTExtendedResult
    15→export type PromiseTResult
    20→export type PromiseExternalToast
    22→export type PromiseData
    30→export interface ToastClassnames
    48→export interface ToastIcons
    57→export interface Action
    63→export interface ToastT
    93→export function isAction
    97→export type Position
    98→export interface HeightT
   104→interface ToastOptions
   118→type Offset
   128→export interface ToasterProps
   152→export type SwipeDirection
   154→export interface ToastProps
   184→export enum SwipeStateTypes
   190→export type Theme
   192→export interface ToastToDismiss
   197→export type ExternalToast
