tests/snapshots/snapshots__fixture_structs_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# Archived project. No maintenance. 
     8→# Structs [![GoDoc](http://img.shields.io/badge/go-documentation-blue.svg?style=flat-square)](http://godoc.org/github.com/fatih/structs) [![Build Status](http://img.shields.io/travis/fatih/structs.svg?style=flat-square)](https://travis-ci.org/fatih/structs) [![Coverage Status](http://img.shields.io/coveralls/fatih/structs.svg?style=flat-square)](https://coveralls.io/r/fatih/structs)
    16→## Install
    22→## Usage and Examples
    74→### Struct methods
    95→### Field methods
   163→## Credits
   168→## License
field.go
     9→var (
    10→	errNotExported = errors.New("field is not exported")
    11→	errNotSettable = errors.New("field is not settable")
    16→type Field struct {
    24→func (f *Field) Tag(key string) string {
    30→func (f *Field) Value() interface{} {
    35→func (f *Field) IsEmbedded() bool {
    40→func (f *Field) IsExported() bool {
    46→func (f *Field) IsZero() bool {
    54→func (f *Field) Name() string {
    59→func (f *Field) Kind() reflect.Kind {
    66→func (f *Field) Set(val interface{}) error {
    89→func (f *Field) Zero() error {
   102→func (f *Field) Fields() []*Field {
   108→func (f *Field) Field(name string) *Field {
   119→func (f *Field) FieldOk(name string) (*Field, bool) {
structs.go
    10→var (
    14→	DefaultTagName = "structs" // struct's field default tag name
    19→type Struct struct {
    27→func New(s interface{}) *Struct {
    81→func (s *Struct) Map() map[string]interface{} {
    89→func (s *Struct) FillMap(out map[string]interface{}) {
   174→func (s *Struct) Values() []interface{} {
   222→func (s *Struct) Fields() []*Field {
   233→func (s *Struct) Names() []string {
   245→func getFields(v reflect.Value, tagName string) []*Field {
   275→func (s *Struct) Field(name string) *Field {
   287→func (s *Struct) FieldOk(name string) (*Field, bool) {
   318→func (s *Struct) IsZero() bool {
   365→func (s *Struct) HasZero() bool {
   398→func (s *Struct) Name() string {
   405→func (s *Struct) structFields() []reflect.StructField {
   428→func strctVal(s interface{}) reflect.Value {
   445→func Map(s interface{}) map[string]interface{} {
   451→func FillMap(s interface{}, out map[string]interface{}) {
   457→func Values(s interface{}) []interface{} {
   463→func Fields(s interface{}) []*Field {
   469→func Names(s interface{}) []string {
   475→func IsZero(s interface{}) bool {
   481→func HasZero(s interface{}) bool {
   487→func IsStruct(s interface{}) bool {
   503→func Name(s interface{}) string {
   509→func (s *Struct) nested(val reflect.Value) interface{} {
tags.go
     6→type tagOptions []string
     9→func (t tagOptions) Has(opt string) bool {
    22→func parseTag(tag string) (string, tagOptions) {
